<resources>
    <string name="app_name">QuickCut</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_profile">Create profile</string>
    <string name="forgot_password">Forgot Password ?</string>


    <string name="terms_condition">By continuing, i confirm that i have read &amp; agree to the Terms &amp; condition and Privacy Policy</string>

    //volley
    <string name="Ok">Ok</string>
    <string name="loading">Loading...</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="InternetNotAvailabel">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="my_profile">My Profile</string>
    <string name="checkInternet">Please Check Your Internet Connection</string>


    // paymentStripe
    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="pay_now">Pay Now</string>
    <string name="more_info">More info</string>
    <string name="ok">OK</string>
    <string name="validationErrors">Validation Errors</string>
    <string name="feel_free">If you have any question feel free to <u>Contact us.</u> support@featurring.com.</string>
    <string name="contact_us">contact us</string>
    <string name="send_notification">We will send you notification as soon as the
                                     product dispatched from here.</string>
    <string name="thanks">Thanks for placing for order - ></string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Appointment</string>
    <string name="title_notifications">Notifications</string>
    <string name="register">REGISTER</string>
    <string name="list">List</string>
    <string name="view_details">View Details</string>
    <string name="fillter">Fillters</string>
    <string name="male">Male Salon</string>
    <string name="female">Female Salon</string>
    <string name="unisex">Unisex Salon</string>
    <string name="mileage">Mileage</string>
    <string name="salon_category">Salon Category</string>
    <string name="rating">Rating</string>
    <string name="popular">Popular</string>
    <string name="recent">Recent</string>
    <string name="nearby">Nearby</string>
    <string name="sort">Sort</string>
    <string name="price">Price</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="MAP_API_KEY">AIzaSyCjH6wwKid2SxovEjEpkE3UDmTwSGQ2xVgType a message</string>
    <string name="title_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>