<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <RelativeLayout
        android:id="@+id/RR_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <RelativeLayout
            android:id="@+id/RR_back"
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_centerInParent="true"
                android:src="@mipmap/back"
                android:layout_width="30dp"
                android:onClick="OnRegisterBack"
                android:layout_height="30dp"
                >
            </ImageView>

        </RelativeLayout>

    </RelativeLayout>

    <ProgressBar
        android:layout_centerInParent="true"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/progressBar"
        android:background="@drawable/progresh_background"
        android:elevation="@dimen/_6sdp"
        android:padding="@dimen/_5sdp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/green_new"
        android:visibility="gone"/>


    <ScrollView
        android:layout_below="@+id/RR_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txt_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_profile"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="28dp">
                </TextView>


                <EditText
                    android:id="@+id/edt_name"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/whiteSecond"
                    android:textSize="@dimen/_13sdp"
                    android:hint="Name"
                    android:background="@drawable/whiteeditround"
                    android:paddingLeft="10dp"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textColorHint="@color/colorGray"
                    />

                <EditText
                    android:id="@+id/edt_email"
                    android:textColor="@color/whiteSecond"
                    android:textSize="@dimen/_13sdp"
                    android:layout_marginTop="20dp"
                    android:hint="Email"
                    android:background="@drawable/whiteeditround"
                    android:paddingLeft="10dp"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textColorHint="@color/colorGray"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/whiteeditround"
                        android:orientation="horizontal">

                        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                            android:id="@+id/ccp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:ccp_clickable="true"
                            app:ccp_showFlag="true"
                            android:layout_margin="@dimen/_10sdp"
                            android:gravity="center"
                            app:ccp_textSize="14sp"
                            app:ccp_defaultCode="91"
                            app:ccp_textColor="@color/colorBlack" />

                    </LinearLayout>

                    <EditText
                        android:maxLength="10"
                        android:id="@+id/edt_mobile"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/whiteSecond"
                        android:textSize="@dimen/_13sdp"
                        android:hint="9876543210"
                        android:background="@drawable/whiteeditround"
                        android:paddingLeft="10dp"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/colorGray"
                        />

                </LinearLayout>

                <EditText
                    android:id="@+id/edt_address"
                    android:textColor="@color/whiteSecond"
                    android:textSize="@dimen/_13sdp"
                    android:layout_marginTop="20dp"
                    android:hint="Home Address"
                    android:background="@drawable/whiteeditround"
                    android:paddingLeft="10dp"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textColorHint="@color/colorGray"
                    />

                <EditText
                    android:id="@+id/edt_selected_area"
                    android:paddingRight="15dp"
                    android:textColor="@color/whiteSecond"
                    android:textSize="@dimen/_13sdp"
                    android:layout_marginTop="20dp"
                    android:hint="City"
                    android:background="@drawable/whiteeditround"
                    android:paddingLeft="10dp"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:drawableRight="@mipmap/drop_downq"
                    android:layout_height="55dp"
                    android:drawablePadding="10dp"
                    android:textColorHint="@color/colorGray"
                    />

                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/edt_passsword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/whiteeditround"
                    android:drawableRight="@mipmap/eye1"
                    android:drawablePadding="10dp"
                    android:hint="Password"
                    android:paddingLeft="10dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/whiteSecond"
                    android:textColorHint="@color/colorGray"
                    android:textSize="@dimen/_13sdp" />

                <EditText
                    android:id="@+id/edt_Cpasssword"
                    android:paddingRight="15dp"
                    android:textColor="@color/whiteSecond"
                    android:textSize="@dimen/_13sdp"
                    android:layout_marginTop="20dp"
                    android:hint="Confirm Password"
                    android:background="@drawable/whiteeditround"
                    android:paddingLeft="10dp"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:drawablePadding="10dp"
                    android:drawableRight="@mipmap/eye1"
                    android:textColorHint="@color/colorGray"
                    />

                <TextView
                    android:padding="2dp"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_condition"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp">

                </TextView>

                <TextView
                    android:id="@+id/bttn_Sedn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_below="@+id/RR_login"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="25dp"
                    android:gravity="center"
                    android:elevation="@dimen/_15sdp"
                    android:text="@string/register"
                    android:onClick="OnRegister"
                    android:background="@drawable/roundbttn_register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>